classDiagram
    %% Ce diagramme inclut les entités avec leurs accesseurs (getters) et la couche de logique métier (Gestion*) ainsi que la Présentation (Controllers).

    class User {
        +__construct(id, email, password, role)
        +getId() int
        +getEmail() string
        +getRole() string
    }

    class Auteur {
        +__construct(id, nom, prenom, biographie, avatar)
        +getId() int
        +getNomComplet() string
    }

    class Categorie {
        +__construct(id, nom, couleur, icone)
        +getId() int
        +getNom() string
        +getCouleur() string
        +getIcone() string
    }

    class Article {
        +__construct(titre, contenu, image_couverture, statut, categorie_id, auteur_id, id, date_creation, vues)
        +getId() int
        +getTitre() string
        +getContenu() string
        +getImageCouverture() string
        +getStatut() string
        +getDateCreation() string
        +getVues() int
        +getCategorieId() int
        +getAuteurId() int
    }

    %% Classes de Traitement (Logique Métier)
    class GestionCategorie {
        -string fichierJson
        +__construct()
        +create(Categorie cat) bool
        +readAll() array
        +update(Categorie cat) bool
        +delete(int id) bool
    }

    class GestionArticle {
        -string fichierJson
        +__construct()
        +create(Article art) bool
        +readAll() array
        +update(Article art) bool
        +delete(int id) bool
    }

    %% Contrôleurs (Présentation API)
    class CategorieController {
        -GestionCategorie gestionnaire
        +__construct()
        +handleRequest(string method)
    }
    
    class ArticleController {
        -GestionArticle gestionnaire
        +__construct()
        +handleRequest(string method)
    }

    %% Relations Architecturales
    GestionCategorie ..> Categorie : manipule
    GestionArticle ..> Article : manipule
    CategorieController ..> GestionCategorie : utilise
    ArticleController ..> GestionArticle : utilise
